--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@shopify/app-bridge-react": "^4.1.10",
     "@shopify/polaris": "^13.9.5",
+    "@shopify/shopify-api": "^11.12.0",
     "apollo-boost": "^0.4.9",
     "dotenv": "^16.5.0",
     "graphql": "^15.10.1",
