--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@shopify/app-bridge-react": "^4.1.10",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.12.0",
+    "@shopify/shopify-app-session-storage-memory": "^4.0.17",
     "apollo-boost": "^0.4.9",
     "dotenv": "^16.5.0",
     "graphql": "^15.10.1",
