--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-sb",
+  "name": "shopify-embedded-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,22 +11,20 @@
   "dependencies": {
     "@shopify/app-bridge": "^3.7.10",
     "@shopify/app-bridge-react": "^4.1.10",
-    "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.12.0",
     "@shopify/shopify-app-session-storage-memory": "^4.0.17",
-    "apollo-boost": "^0.4.9",
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "graphql": "^15.10.1",
-    "isomorphic-fetch": "^3.0.0",
-    "next": "15.3.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "memorystorage": "^0.12.0",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "15.3.2",
     "tailwindcss": "^4"
   }
 }
